2008-12-28 02:23-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Framework/PCEditorManager.m: Remove log.
	* Modules/Debuggers/ProjectCenter/GNUmakefile: Added new images
	to resource list.
	* Modules/Debuggers/ProjectCenter/PCDebugger.[hm]: Added setStatus:
	method to manage status field.
	* Modules/Debuggers/ProjectCenter/PCDebuggerView.m: Added code
	to handle the toolbar.
	* Modules/Debuggers/ProjectCenter/PTYView.[hm]: Added method called
	"terminate" so that subclasses can override how the process is
	terminated.
	* Modules/Debuggers/ProjectCenter/Resources/PCDebugger.gorm: Added
	status line.
	* Modules/Debuggers/ProjectCenter/Resources/go_button.png
	* Modules/Debuggers/ProjectCenter/Resources/next_button.png
	* Modules/Debuggers/ProjectCenter/Resources/pause_button.png
	* Modules/Debuggers/ProjectCenter/Resources/restart_button.png
	* Modules/Debuggers/ProjectCenter/Resources/stepin_button.png
	* Modules/Debuggers/ProjectCenter/Resources/stepout_button.png:
	Images for debugger toolbar.

2008-12-27 00:47-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Framework/PCEditorManager.m: Changed code to use the filePath
	that is passed in, since it is now fully qualified.
	* Modules/Debuggers/ProjectCenter/PCDebugger.m: Pass the "-f" (fullname)
	flag to gdb.  This causes gdb to give a fully qualified pathname back.
	* Modules/Debuggers/ProjectCenter/PCDebuggerView.[hm]: Code to 
	extract the line and file information.
	* Modules/Debuggers/ProjectCenter/PTYView.[hm]: New method
	putString:.

2008-12-26 13:01-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Framework/PCEditorManager.m: Scroll to and select the line that
	the debugger has stopped at.
	* Modules/Debuggers/ProjectCenter/PCDebuggerView.m: bring the debugger
	window to the front when a breakpoint is detected.

2008-12-26 02:25-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Framework/PCEditorManager.m